samples/_failures_safe/1761648294_ede797_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc92342a.c: In function ‘print_state_machine’:
./samples/SAFE/__tmp_cc92342a.c:136:16: error: missing terminating " character
  136 |         printf("Current State: UNKNOWN
      |                ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_cc92342a.c:136:9: error: expected expression at end of input
  136 |         printf("Current State: UNKNOWN
      |         ^~~~~~
./samples/SAFE/__tmp_cc92342a.c:136:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cc92342a.c:136:9: error: expected declaration or statement at end of input
